# xarray-fancy-repr

./: .gitignore  .pre-commit-config.yaml  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: pypipublish.yml
js/: common.tsx  icons.tsx  search.tsx  styles.css  types.ts  widget.tsx
src/xarray_fancy_repr/: __init__.py  utils.py  widget.py  wrap.py
src/xarray_fancy_repr/static/: widget.css  widget.js
