[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xarray_fancy_repr"
version = "0.0.0"
dependencies = ["anywidget", "xarray"]

[project.optional-dependencies]
dev = ["watchfiles", "jupyterlab"]

# automatically add the dev feature to the default env (e.g., hatch shell)
[tool.hatch.envs.default]
features = ["dev"]


[tool.hatch.build]
artifacts = ["src/xarray_fancy_repr/static/*"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["src/xarray_fancy_repr/static/widget.js"]
skip-if-exists = ["src/xarray_fancy_repr/static/widget.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "npm"
build_cmd = "build"
path = "js"
