[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xarray-fancy-repr"
version = "0.0.0"
description = "Fancy reprs for Xarray objects in Jupyter notebooks"
keywords = ["xarray", "jupyter", "widget"]
readme = "README.md"
authors = [
    {name = "Benoît Bovy"},
]
maintainers = [
    {name = "xarray-fancy-repr contributors"},
]
license = {text = "Apache-2.0"}
dependencies = ["anywidget", "xarray"]

[project.optional-dependencies]
dev = ["watchfiles", "jupyterlab", "pytest", "pre-commit"]

[project.urls]
Repository = "https://github.com/benbovy/xarray-fancy-repr"

# automatically add the dev feature to the default env (e.g., hatch shell)
[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.build]
artifacts = ["src/xarray_fancy_repr/static/*"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["src/xarray_fancy_repr/static/widget.js"]
skip-if-exists = ["src/xarray_fancy_repr/static/widget.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "npm"
build_cmd = "build"
path = "js"

[tool.black]
line-length = 100

[tool.ruff]
target-version = "py311"
builtins = ["ellipsis"]
exclude = [
    ".git",
    ".eggs",
    "build",
    "dist",
    "__pycache__",
]
# E402: module level import not at top of file
# E501: line too long - let black worry about that
# E731: do not assign a lambda expression, use a def
ignore = [
    "E402",
    "E501",
    "E731",
]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    # Pyupgrade
    "UP",
]

[tool.ruff.isort]
known-first-party = ["xarray_fancy_repr"]
known-third-party=[
    "anywidgets",
    "traitlets",
]
